add portfolio page to website

--- a/index.html
+++ b/index.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CHANGE ME</title>
+    <title>Amelia Hundscheid Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
+<nav>
+  <h1>Amelia Hundscheid's Super Epic Portfolio Guide</h1>
+  <ul id="nav-ul">
+    <li class="nav-li">
+      </li>
+      <a href="index.html">Home</a>
+      <li class="nav-li">
+        <a href="portfolio.html">Portfolio</a>
+    </li>
+  </ul>
+</nav>
+
   <body>
-    <!-- All content goes here -->
-    <div id="all-contents">
-      
+ <main>
+  <!--sidebar section-->
+ <div class="sidebar">
+   <img class="sidebar-img" width="400px" class="sidebar-img" src="https://static.wikia.nocookie.net/signalis/images/f/fe/FKLR.png/revision/latest?cb=20221230214107">
+</div>
+
+<!--Content-->
+<div class="content">
+   <h2>Amelia Hundscheid</h2>
+<p>Covington High School</p> 
+
+<!--interests-->
+<div id="interests">
+     <h3>Interests</h3>
+<ul>
+  <li>Horror Games</li>
+  <li>Bass Guitar</li>
+  <li>Cats</li>
+      </ul>
+     </div>
     </div>
+   </main>
   </body>
 </html>
